2006-05-07  David Reveman  <davidr@novell.com>

	* plugins/compiz.schemas.in.in: Regen.

	* plugins/switcher.c: Add icon support, minimized windows support
	and allow switcher to show up when only one selectable window exist.

	* images/Makefile.am: Add default icon image.

	* include/compiz.h:
	* src/texture.c:
	* src/event.c (handleEvent):
	* src/screen.c:
	* src/display.c:
	* src/window.c: Add WM icon interface.

	* gnome/window-decorator/gnome-window-decorator.c: Compute
	switcher title text width correctly.

	* src/event.c (handleEvent): Insert windows correctly when
	reparenting.

2006-05-07  Dan Winship  <danw@novell.com>

	* configure.ac: Add --with-scale-corner option and make
	compiz.schemas reflect it; the best corner to use depends on where
	the panels are and what's on them, so distros will want to
	override this to match their default panel layout.

	* src/event.c (eventMatches): Fix the the "water plugin gets
	mysteriously activated when activating some other keybinding" bug.

2006-05-05  Dan Winship  <danw@novell.com>

	* Makefile.am: 
	* autogen.sh:
	* configure.ac: require intltool for option-description
	translation

	* plugins/Makefile.am: translate compiz.schemas.in into
	compiz.schemas

2006-05-05  Dan Winship  <danw@novell.com>

	* src/display.c (COMMAND_OPTION): Put numbers into the shortDescs
	of the command and run_command options

	* plugins/wobbly.c (WOBBLY_SNAP_MODIFIERS_DEFAULT): Use Shift
	rather than Control, for consistency with Metacity, and to remove
	the ambiguity about whether Ctrl+Alt+Button1 should be "grab cube"
	or "move with snapping". (bnc 169402)

	* plugins/compiz.schemas: regen

2006-05-05  David Reveman  <davidr@novell.com>

	* plugins/compiz.schemas: Regen.

	* gnome/window-decorator/gnome-window-decorator.c: Forward
	metacity's bell settings to compiz.

	* plugins/water.c:
	* plugins/wobbly.c:
	* plugins/fade.c: Add visual bell.

	* include/compiz.h:
	* src/display.c: Add audible bell option.
